OT99-40-CategoryController-GetAllEndpoint: lambda upgrade in CategoryMapper